soundlib/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soundlib
  labels:
    app: soundlib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soundlib
  template:
    metadata:
      labels:
        app: soundlib
    spec:
      containers:
        - name: soundlib
          image: registry.services.atlantishq.de/atlantishq/atlantis-soundlib:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
