soundlib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soundlib
spec:
  selector:
    app: soundlib
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
